--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,15 +42,9 @@ flutter:
     - assets/documents_list/
     - assets/onboarding/
     - assets/animations/
-    - assets/subscription/
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+    - assets/images/
+    
+  fonts:
+    - family: DancingScrip
+      fonts:
+        - asset: assets/fonts/DancingScript-Regular.ttf
