--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   lottie: ^3.3.1
   path_provider: ^2.1.5
   pdf: ^3.11.2
+  persistent_bottom_nav_bar: ^6.2.1
   printing: ^5.14.0
   purchases_flutter: ^8.4.5
   shared_preferences: ^2.5.2
@@ -30,10 +31,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-dependency_overrides:
+dependency_overrides: null
 #   package_info_plus: ^4.0.1
-  # revenuecat: ^0.0.2
-
+# revenuecat: ^0.0.2
 flutter:
   uses-material-design: true
 
@@ -43,7 +43,7 @@ flutter:
     - assets/onboarding/
     - assets/animations/
     - assets/images/
-    
+
   fonts:
     - family: DancingScrip
       fonts:
