--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,15 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.8.0+1
   equatable: ^2.0.7
-  file_picker: ^8.3.3
+  file_picker: ^8.3.5
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  image_picker: ^1.1.2
   in_app_review: ^2.0.10
+  intl: ^0.20.2
   lottie: ^3.3.1
   path_provider: ^2.1.5
   pdf: ^3.11.2
@@ -25,8 +29,10 @@ dependencies:
   printing: ^5.14.0
   purchases_flutter: ^8.4.5
   shared_preferences: ^2.5.2
+  uuid: ^4.5.1
 
 dev_dependencies:
+  build_runner: ^2.4.15
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
