--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   persistent_bottom_nav_bar: ^6.2.1
   printing: ^5.14.0
   purchases_flutter: ^8.4.5
+  scanbot_sdk: ^6.1.2
   shared_preferences: ^2.5.2
   uuid: ^4.5.1
 
