--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,18 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_pdfview: ^1.4.0
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  http_parser: ^4.1.2
   image_picker: ^1.1.2
   in_app_review: ^2.0.10
   intl: ^0.20.2
   lottie: ^3.3.1
+  mime: ^2.0.0
   path_provider: ^2.1.5
   pdf: ^3.11.2
+  pdf_render: ^1.4.12
   persistent_bottom_nav_bar: ^6.2.1
   printing: ^5.14.0
   purchases_flutter: ^8.4.5
