--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   printing: ^5.14.0
   purchases_flutter: ^8.4.5
   scanbot_sdk: ^6.1.2
+  share_plus: ^10.1.4
   shared_preferences: ^2.5.2
   uuid: ^4.5.1
 
