--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   hive_generator: ^2.0.1
   http_parser: ^4.1.2
   image_picker: ^1.1.2
+  in_app_purchase: ^3.2.1
   in_app_review: ^2.0.10
   intl: ^0.20.2
   lottie: ^3.3.1
