fix: navigation fixes after successfull subscription

--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
@@ -71,7 +71,7 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <StoreKitConfigurationFileReference
-         identifier = "../Test.storekit">
+         identifier = "../../../Downloads/Test.storekit">
       </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
