--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   http_parser: ^4.1.2
   image_picker: ^1.1.2
   in_app_purchase: ^3.2.1
+  in_app_purchase_storekit: ^0.3.21
   in_app_review: ^2.0.10
   intl: ^0.20.2
   lottie: ^3.3.1
