--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
+  flutter_launcher_icons: ^0.13.1
   flutter_pdfview: ^1.4.0
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
@@ -62,3 +63,10 @@ flutter:
     - family: DancingScrip
       fonts:
         - asset: assets/fonts/DancingScript-Regular.ttf
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/images/app_launch_icon.jpg"
+  min_sdk_android: 21 
